--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,17 @@
             <systemPath>${basedir}/lib/opencv-4.10.0.jar</systemPath>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>gov.nist.math</groupId>
+            <artifactId>jama</artifactId>
+            <version>1.0.3</version>
+        </dependency>
+
     </dependencies>
 </project>
